--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body{
   background: rgb(191,244,244);
-background: linear-gradient(0deg, rgba(191,244,244,1) 3%, rgba(191,244,201,1) 33%, rgba(238,255,158,1) 57%, rgba(179,201,255,1) 100%);
+background: linear-gradient(0deg, rgba(191,244,244,1) 3%, rgba(191,244,201,1) 64%, rgba(238,255,158,1) 83%, rgba(179,201,255,1) 100%);background-repeat: no-repeat;
+background-attachment:fixed;
+
 }
