--- a/style.css
+++ b/style.css
@@ -4,3 +4,11 @@ background: linear-gradient(0deg, rgba(191,244,244,1) 3%, rgba(191,244,201,1) 64
 background-attachment:fixed;
 
 }
+
+
+#aboutDiv{
+width: 80%;
+margin-left:10%;
+margin-top: 10%;
+font-family: arial;
+}
