--- a/style.css
+++ b/style.css
@@ -1,14 +1,50 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,800&display=swap');
+
+#mainBody{
+background-image: url('flyerBG.jpg');
+background-attachment:fixed;
+background-size:cover;
+}
+
+#flyerDiv{
+  width: 100%;
+  display: block;
+}
+
+a{
+  font-family: "Playfair";
+  font-size: 20px;
+  font-style: italic;
+  color: rgb(241, 255, 153);
+}
+.flyer{
+  display: block;
+  margin:0 auto;
+}
+#aboutBody{
   background: rgb(191,244,244);
-background: linear-gradient(0deg, rgba(191,244,244,1) 3%, rgba(191,244,201,1) 64%, rgba(238,255,158,1) 83%, rgba(179,201,255,1) 100%);background-repeat: no-repeat;
+background: linear-gradient(0deg, rgba(191,244,244,1) 3%, rgba(191,244,201,1) 64%, rgba(179,201,255,1) 100%);background-repeat: no-repeat;
 background-attachment:fixed;
 
 }
 
+#aboutHeader{
+  font-family: "Playfair";
+  font-weight: 600;
+  font-size: 60px;
+  font-style: italic;
+  color: rgb(100,100,250);
+}
 
+#emphasis{
+font-style:italic;
+font-size: 25px;
+color: rgb(100,100,250);}
 #aboutDiv{
-width: 80%;
-margin-left:10%;
+width: 60%;
+margin-left:20%;
 margin-top: 10%;
 font-family: arial;
+font-weight: bold;
+color: rgb(50,50,150);
 }
