added a poster fixed a link

--- a/style.css
+++ b/style.css
@@ -22,8 +22,13 @@ a{
 .flyer{
   display: block;
   margin:0 auto;
+  margin-bottom: 50px;
+  padding: 2px;
   -webkit-box-shadow: 0px 0px 21px 10px #000000;
   box-shadow: 0px 0px 21px 10px #000000;
+
+  object-fit: scale-down; max-width: 100%
+
 }
 
 #aboutBody{
@@ -39,6 +44,7 @@ background-attachment:fixed;
   font-size: 60px;
   font-style: italic;
   color: rgb(100,100,250);
+  position: sticky;
 }
 
 #emphasis{
